fix: fix user messge align

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -3187,7 +3187,7 @@ mck-sidebox .mck-group-member-list li a:hover {
     right: 20px !important;
 }
 .mck-msg-right .mck-msg-box {
-    float: right !important;
+    margin-left: auto;
     font-size: 14px;
     margin-right: 15px;
     min-height: 20px;
